--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -85,7 +85,7 @@ block content
                 | 時を感じる
                 br
                 | ミッドセンチュリーデザイン
-              div.p_section-contents.u_lineHeight.u_anime-fadeUp(data-anime="addClass")
+              div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50(data-anime="addClass")
                 p
                   | 『TIME』は20世紀半ば（1940〜60年代）、ミッドセンチュリーを感じさせるデザインブランドです。どこか懐かしく、あたたかさを感じる⾼級感。⽊の上質感。ツヤ感を表現し、幅広い世代に親しんでいただけるような設計です。
                   br
@@ -109,7 +109,7 @@ block content
                   | 時を超える
                   br
                   | ロングライフなデザイン
-                div.p_section-contents.u_lineHeight.u_anime-fadeUp(data-anime="addClass")
+                div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50(data-anime="addClass")
                   p
                     | 『TIME』は何世代にも⻑期間に渡り、愛着をもって使⽤いただけるよう、三重県のウレタン⼯場の最⾼品質のウレタン技術を使⽤しています。
                     br
@@ -801,7 +801,7 @@ block content
                         | シンプルに。上質に。
                         br.u_md
                         |どの世代にも親和性のあるデザイン。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       |20世紀半ば（1940～60年代）のミッドセンチュリーデザインには、その時代を生きた人のライフスタイルを感じさせる懐かしさやぬくもりがあります。自由で斬新な雰囲気をもちあわせながら、ハイセンスなレトロフューチャーなライフスタイルを演出します。
                   dl
                     dt.t_flex
@@ -831,7 +831,7 @@ block content
                     dt
                       p.u_weight600.u_letter-spacing150
                         | 北海道の銘木、ミズナラの木材を使用。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       div
                         |TIMEの木製のアイテムや部材は、環境への配慮を考え、北海道産の択伐（自然保護のために計画的に伐採）されたミズナラの木を使用しています。ミズナラの木は、希少価値が高く、ウイスキーなどの樽材にも使われ、寒くて水気の多いところに生育する木材で、1/fゆらぎの木目※1、トラフ※2が特徴です。古くからもミズナラ素材の価値は高く、人気の高い木材は、さまざまなインテリア空間に合わせやすいのが特徴です。最近ではウッドショックの世界情勢も重なり、国内の資材においても入手困難になってきています。世界的にはオークの呼び名で木材の王様とも言われ、最高級の家具にも使われる木材です。
 
@@ -860,7 +860,7 @@ block content
                     dt
                       p.u_weight600.u_letter-spacing150
                         | 昭和元年創業。香川県高松市の家具工場で生産。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       |木製アイテムは瀬戸内海に面した四国、高松の小規模な工場でつくられます。家具の製造一筋に行ってきた工場は昭和元年に生まれ、100年近くの間技術を伝承、特にコタツを中心につくられてきました。最近ではウッドショック、環境に対する配慮、世界情勢の流れもあり、海外に流れていた家具の生産が国内に戻ってきました。高松の工場には、職人が日夜家具をつくり続け、お客様のもとへ喜んでいただける製品を届けたいと考えています。TIMEに込められた職人の想いが皆様に届けば幸いです。
 
           div.p_swichi-list
@@ -883,7 +883,7 @@ block content
                     dt
                       p.u_weight600.u_letter-spacing150
                         | 最上級のウレタンで実現。理想の座り心地が続くロングライフ。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       | TIMEのソファの上質な座り心地と、長い間ヘタらないロングライフのソファを実現しているのは、創業から長きにわたりクッション資材を製造・販売。有名家具ブランドや有名リゾートホテルにも製品を提供しつづけている、三重県のウレタン加工工場でつくられている高品質ウレタンです。ソファの座り心地やカラダにかかる負荷は、ウレタンの品質によって左右されます。TIMEのソファには、耐久性・体圧分散性に優れた高級ソファにも使われる最上級品質のウレタンを使用し、ふっくらと心地よくもしっかりとカラダを支える座り心地を実現しています。
 
           div.p_swichi-list
@@ -906,7 +906,7 @@ block content
                     dt
                       p.u_weight600.u_letter-spacing150
                         | 環境に配慮したサスティナブル生地、反毛ワタ混リサイクル糸。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       | TIMEのソファ生地には、環境に配慮した素材『反毛ワタ混リサイクル糸』を使用しています。反毛ワタ混リサイクル糸は、愛知県三河地方で明治時代から続けられてきた技術をルーツとする、再生繊維を活用したリサイクル糸です。 反毛とは未使用のまま破棄される生地や、工場で発生する落ちワタ、はぎれなどを集めてもう一度ワタの状態に戻し、糸の原料を作る技術のことを言います。繊維が貴重だった戦後に発展し、現代も受け継がれている極めて優れたリサイクル産業です。 再生する際にエネルギーが過剰にかからず、廃棄物を減らすことができます。また既存の素材を再利用することで生産に必要な天然資源やエネルギーを節約し、繊維の寿命を延ばすことに繋がります。 モノを大切にする日本の文化とミッドセンチュリーデザインを融合させました。
 
           div.p_swichi-list
@@ -929,7 +929,7 @@ block content
                     dt
                       p.u_weight600.u_letter-spacing150
                         | 日本国内製の信頼の品質。
-                    dd.u_lineHeight.u_weight500
+                    dd.u_lineHeight.u_weight500.u_letter-spacing50
                       | TIMEの家具を使う皆様のかけがえのない時間を、最もくつろげる良い時間。さらには、皆様の一番好きな時間にしていただけるよう、材料から生産まで、国内製にこだわりました。日本で生まれた材料、部材にこだわり、日本の職人の手で丈夫に、そして丁寧に作り上げました。確かな品質で、長い間劣化が少なく使用していただける、時間を超えた愛着のミッドセンチュリーデザイン家具です。
 
         a.p_otherItem(href="#Functions")
