--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -540,7 +540,7 @@ block content
         ul.p_gui.t_flex.t_Roboto.p_gui__three(data-tab-target="item")
           li.p_gui-list.__isActive
             button(type="button").u_letter-spacing50.u_weight600
-              span cafe table
+              span café table
           li.p_gui-list
             button(type="button").u_letter-spacing50.u_weight600
               span living table
@@ -554,11 +554,11 @@ block content
             button(type="button").u_letter-spacing50.u_weight600
               span stool
       div.p_swichi.p_lineup-contets(data-tab-contents="item")
-        //CAFÉ table
+        //café table
         div.p_swichi-list
           section.p_subject
             div.t_inner
-              h3.p_subject-title.u_weight600.u_letter-spacing50.t_Roboto cafe table
+              h3.p_subject-title.u_weight600.u_letter-spacing50.t_Roboto café table
               div.p_subject-view.u_letter-spacing50.u_lineHeight
                 p
                   |リビングで過ごす時間にカフェを楽しむ時間にちょうど良いアイテムです。棚板も完備されているのでPCを置いて、リモートワークでも疲れにくい使い勝手の良いサイズです。
