--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -109,7 +109,7 @@ block content
                   | 時を超える
                   br
                   | ロングライフなデザイン
-                div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50(data-anime="addClass")
+                div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50.u_letter-spacing50(data-anime="addClass")
                   p
                     | 『TIME』は何世代にも⻑期間に渡り、愛着をもって使⽤いただけるよう、三重県のウレタン⼯場の最⾼品質のウレタン技術を使⽤しています。
                     br
@@ -957,7 +957,7 @@ block content
               span お⼿⼊れのしかた
         div.p_swichi.indexSupport_contets(data-tab-contents="support")
           div.p_swichi-list
-            div.indexSupport_text.u_lineHeight
+            div.indexSupport_text.u_lineHeight.u_letter-spacing50
               p
                 | ◎本製品は　家庭用に規格され製造された家具です。ご使用する際はお取り扱いに十分ご注意ください。業務用などでの使用については予め使用目的、条件などをご確認の上ご使用ください。
                 br
@@ -982,7 +982,7 @@ block content
                 | ◎本製品の改造や不当な修理は絶対に行わないでください。
 
           div.p_swichi-list
-            div.indexSupport_text.u_lineHeight
+            div.indexSupport_text.u_lineHeight.u_letter-spacing50
               p
                 | ◎本製品のお手入れは、定期的に付着した埃などを取り払います。著しい汚れが付着した場合は、柔らかい布に中性洗剤を薄めた水を浸し、汚れを拭き取ったあと、乾いた布で拭き、十分に乾燥させてからご使用ください。 濡れたまま使用するとカビの発生や、変形、変色等の原因になります。
 
