--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -423,7 +423,7 @@ block content
                   ul.p_spec-item.u_lineHeight
                     li.p_spec-item-list
                       dl.t_flex
-                        dt.u_letter-spacing50.u_weight400.t_RobotoSofa
+                        dt.u_letter-spacing50.u_weight400.t_RobotoSofa Sofa
                         dd.u_letter-spacing50
                           span.t_Roboto.u_weight400
                             | W890×D700×H700 SH410mm
