--- a/resources/src/pug/components/include/_footer.pug
+++ b/resources/src/pug/components/include/_footer.pug
@@ -4,7 +4,7 @@ footer.c_footer
       p.c_footer-logo.u_desktop
         +img(`${_RESOURCES}assets/images/components/footer/logo.svg`, `出口化成`)
       div.c_footer-contents
-        p.c_footer-contents-title.t_Roboto.u_letter-spacing100.u_weight400 SWAYLEY Official SNS
+        p.c_footer-contents-title.t_Roboto.u_letter-spacing100.u_weight400 time Official SNS
         ul.c_footer-contents-item
           li.c_footer-contents-item-list
             a(target="_blank" href="https://www.instagram.com/time_furniture/").t_flex
