--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -6,8 +6,8 @@ block config
 
 block meta
   +meta({
-    title: "ミッドセンチュリー家具ブランド｜TIME｜Japan",
-    description: "『TIME-タイム-』は、20世紀半ば、いわゆるミッドセンチュリーテイストデザインのシリーズです。すべて日本国内で製造し、つくり手の卓越された技術によって、耐久性をもたせ、何世代にも渡り楽しんでいただける、高品質な家具です。",
+    title: "ミッドセンチュリー家具ブランド｜time｜Japan",
+    description: "『time-タイム-』は、20世紀半ば、いわゆるミッドセンチュリーテイストデザインのシリーズです。すべて日本国内で製造し、つくり手の卓越された技術によって、耐久性をもたせ、何世代にも渡り楽しんでいただける、高品質な家具です。",
   })
 
 block content
@@ -48,7 +48,7 @@ block content
         div.indexSwayley_title
           h2.indexSwayley_title-jp.u_letter-spacing200.u_weight600 時を超えるひととき
           p.indexSwayley_title-en.t_Roboto.u_weight500.u_letter-spacing50 Timeless Moments
-        p.indexSwayley_name.t_Roboto.u_letter-spacing200.u_weight600 TIME
+        p.indexSwayley_name.t_Roboto.u_letter-spacing200.u_weight600 time
       div.indexSwayley_scroll.t_flex
         p.indexSwayley_scroll-text.u_weight500.u_letter-spacing50.t_Roboto Scroll Down
         span.indexSwayley_scroll-line
@@ -64,7 +64,7 @@ block content
               br.u_md
               |⾄福の時間の創造
           div.indexStory_text.u_lineHeightLarge.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
-            | ファニチャーブランド『TIME-タイム-』は、
+            | ファニチャーブランド『time-タイム-』は、
             br
             | 20世紀半ば（1940〜60年代）の、いわゆるミッドセンチュリーのデザインを踏襲し、
             br
@@ -78,7 +78,7 @@ block content
         div.indexOffer_view.t_flex.p_background-wrapper
           div.indexOffer_contents
             h2.p_title.t_flex.u_letter-spacing50.u_anime-fadeUp(data-anime="addClass")
-              span.p_title-name.u_weight600.t_Roboto TIME
+              span.p_title-name.u_weight600.t_Roboto time
               span.p_title-number.u_weight700.t_RobotoSlab Concept : 01
             section.p_section
               h3.p_section-title.u_lineHeight.u_letter-spacing150.u_weight600.u_anime-fadeUp(data-anime="addClass")
@@ -87,7 +87,7 @@ block content
                 | ミッドセンチュリーデザイン
               div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50(data-anime="addClass")
                 p
-                  | 『TIME』は20世紀半ば（1940〜60年代）、ミッドセンチュリーを感じさせるデザインブランドです。どこか懐かしく、あたたかさを感じる⾼級感。⽊の上質感。ツヤ感を表現し、幅広い世代に親しんでいただけるような設計です。
+                  | 『time』は20世紀半ば（1940〜60年代）、ミッドセンチュリーを感じさせるデザインブランドです。どこか懐かしく、あたたかさを感じる木の上質感。ツヤ感を表現し、幅広い世代に親しんでいただけるような設計です。
                   br
                   | ⾊や縫製などに⾄るまでこだわり、どの空間のインテリアにもあう、ビンテージでシンプルな飽きのこないデザインを⽬指しました。
 
@@ -102,7 +102,7 @@ block content
           div.indexShape_view.t_flex.p_background-wrapper
             div.indexShape_contents
               h2.p_title.t_flex.u_letter-spacing50.u_anime-fadeUp(data-anime="addClass")
-                span.p_title-name.u_weight600.t_Roboto TIME
+                span.p_title-name.u_weight600.t_Roboto time
                 span.p_title-number.u_weight700.t_RobotoSlab Concept : 02
               section.p_section
                 h3.p_section-title.u_lineHeight.u_letter-spacing150.u_weight600.u_anime-fadeUp(data-anime="addClass")
@@ -111,11 +111,11 @@ block content
                   | ロングライフなデザイン
                 div.p_section-contents.u_lineHeight.u_anime-fadeUp.u_letter-spacing50.u_letter-spacing50(data-anime="addClass")
                   p
-                    | 『TIME』は何世代にも⻑期間に渡り、愛着をもって使⽤いただけるよう、三重県のウレタン⼯場の最⾼品質のウレタン技術を使⽤しています。
+                    | 『time』は何世代にも渡り、愛着をもってご使⽤いただけるよう、三重県のウレタン⼯場でつくられた高品質なウレタンを使⽤しています。
                     br
-                    | グラつきがない重厚感ある『安定性』。くつろぎの時間を演出する『クッション性』。そして、⻑い間ヘタレがないウレタンと⽣地の『耐久性』。シンプルなデザインの中に様々な性能をもたせました。
+                    | グラつきがない重厚感ある『安定性』。くつろぎの時間を演出する『クッション性』。そして、⻑い間ヘタリにくいウレタンと⽣地の『耐久性』。シンプルなデザインの中に様々な性能をもたせました。
                     br
-                    | ユーザーと製品の間の『時間』を⼤切なものにし、現代の使い捨て社会にはない、未来をつくっていきましょう。
+                    | お客様とtimeの間の『時間』を⼤切なものにし、現代の使い捨て社会にはない、未来をつくっていきましょう。
 
     div.indexSlider
       div.indexSlider_wrapper.t_wrapper(data-slider="gallery")
@@ -162,7 +162,7 @@ block content
                 h3.p_subject-title.u_weight600.u_letter-spacing100.t_Roboto 3 seat sofa
                 div.p_subject-view.u_letter-spacing50.u_lineHeight
                   p
-                    | 子供から大人まで、背丈に関係なく誰もがしっかりと座ることのできるスタンダードでちょうど良いサイズです。座面の幅は1680mmのコンパクトな3人掛けのソファ。
+                    | 子供から大人まで、背丈に関係なく誰もがしっかりと座ることのできるスタンダードでちょうど良いサイズです。コンパクトな3人掛けのソファ。
               div.p_slider
                 div.p_slider-wrapper
                   div.p_slider-contets.t_inner.swiper-container(data-slider="lineup")
@@ -451,7 +451,9 @@ block content
                 h3.p_subject-title.u_weight600.u_letter-spacing100.t_Roboto Ottoman
                 div.p_subject-view.u_letter-spacing50.u_lineHeight
                   p
-                    | 一人で座る場合は、1seat SOFAとセットで足を投げ出したり、来客で椅子が必要になった場面でも活躍してくれます。
+                    | 一人で座る場合は、1seat SOFAとセットで足を伸ばしてくつろいだり、
+                    br
+                    | 来客で椅子が必要になった場面でも活躍してくれます。
               div.p_slider
                 div.p_slider-wrapper
                   div.p_slider-contets.t_inner.swiper-container(data-slider="lineup")
@@ -565,7 +567,7 @@ block content
               h3.p_subject-title.u_weight600.u_letter-spacing50.t_Roboto café table
               div.p_subject-view.u_letter-spacing50.u_lineHeight
                 p
-                  |リビングで過ごす時間にカフェを楽しむ時間にちょうど良いアイテムです。棚板も完備されているのでPCを置いて、リモートワークでも疲れにくい使い勝手の良いサイズです。
+                  |リビングで過ごす時間やカフェを楽しむ時間にちょうど良いアイテムです。天板の下には棚板も完備されているのでPCを置いて、リモートワークでも使い勝手の良いサイズです。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
               ul.p_thumbnailTabs-list(data-tab-target="item-sub")
@@ -643,7 +645,7 @@ block content
               h3.p_subject-title.u_weight600.u_letter-spacing50.t_Roboto tv140 board
               div.p_subject-view.u_letter-spacing50.u_lineHeight
                 p
-                  | コンパクトなサイズですがしっかり大型のTV設置ができます。扉が引き戸式になっているので、ボードの前に移動しての整理などが便利です。脚部の高さもスタイリッシュに確保されていますので、電動掃除機などでの清掃もスムーズです。
+                  | コンパクトながら存在感のあるミニマルデザインで、お部屋を圧迫しません。扉は引き戸になっています。脚部の高さも確保されていますので、ロボット掃除機などでの清掃もスムーズです。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
               ul.p_thumbnailTabs-list(data-tab-target="item-sub3")
@@ -682,7 +684,7 @@ block content
               h3.p_subject-title.u_weight600.u_letter-spacing50.t_Roboto shelf 70
               div.p_subject-view.u_letter-spacing50.u_lineHeight
                 p
-                  | 部屋のどのスペースにおいても活躍できるのがこのスタイリッシュなシェルフです。本や小物、シェルフ空間が空洞なので、グリーンなどを置いてハイセンスなインテリアに。
+                  | お部屋のどのスペースに置いても活躍できるシェルフです。本や小物を置いたり、背板がないので、グリーンなどを置くこともできます。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
               ul.p_thumbnailTabs-list(data-tab-target="item-sub4")
@@ -771,7 +773,7 @@ block content
           span.p_title-number.u_weight500.t_Roboto.u_letter-spacing100 6 Features
         h3.p_headline.u_weight600.u_letter-spacing150.u_lineHeight.u_anime-fadeUp(data-anime="addClass")
           span
-            | TIMEの特徴
+            | timeの特徴
         ul.p_tabs.t_flex.u_weight400.u_anime-fadeUp(data-tab-target="innovation" data-anime="addClass")
           li.p_tabs-list.__isActive
             button(type="button") デザイン性
@@ -811,7 +813,7 @@ block content
                         br.u_md
                         |どの世代にも親和性のあるデザイン。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
-                      |20世紀半ば（1940～60年代）のミッドセンチュリーデザインには、その時代を生きた人のライフスタイルを感じさせる懐かしさやぬくもりがあります。自由で斬新な雰囲気をもちあわせながら、ハイセンスなレトロフューチャーなライフスタイルを演出します。
+                      |20世紀半ば（1940～60年代）のミッドセンチュリーデザインには、その時代を生きた人のライフスタイルを感じさせる懐かしさやぬくもりがあります。自由で斬新な雰囲気をもちあわせながら、ハイセンスでレトロフューチャーなライフスタイルを演出します。
                   dl
                     dt.t_flex
                       p.u_weight600.u_letter-spacing150
@@ -842,7 +844,7 @@ block content
                         | 北海道の銘木、ミズナラの木材を使用。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
                       div
-                        |TIMEの木製のアイテムや部材は、環境への配慮を考え、北海道産の択伐（自然保護のために計画的に伐採）されたミズナラの木を使用しています。ミズナラの木は、希少価値が高く、ウイスキーなどの樽材にも使われ、寒くて水気の多いところに生育する木材で、1/fゆらぎの木目※1、トラフ※2が特徴です。古くからもミズナラ素材の価値は高く、人気の高い木材は、さまざまなインテリア空間に合わせやすいのが特徴です。最近ではウッドショックの世界情勢も重なり、国内の資材においても入手困難になってきています。世界的にはオークの呼び名で木材の王様とも言われ、最高級の家具にも使われる木材です。
+                        |timeの木製のアイテムや部材は、環境への配慮を考え、北海道産の択伐（自然保護のために計画的に伐採）されたミズナラの木を使用しています。ミズナラの木は、寒くて水気の多いところに生育する木材で、1/fゆらぎの木目※1、トラフ※2が特徴です。古くからもミズナラ素材の価値は高く、人気の高い木材は、さまざまなインテリア空間に合わせやすいのが特徴です。最近ではウッドショックの世界情勢も重なり、国内の資材においても入手困難になってきています。世界的にはオークの呼び名で木材の王様とも言われ、最高級の家具にも使われる木材です。
 
                       small.u_letter-spacing50
                         | ※1：1/fゆらぎの木目とは、自然界が創り出す波長。人間にとって心地よいとされる波長は木の木目に現れています。
@@ -870,7 +872,7 @@ block content
                       p.u_weight600.u_letter-spacing150
                         | 昭和元年創業。香川県高松市の家具工場で生産。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
-                      |木製アイテムは瀬戸内海に面した四国、高松の小規模な工場でつくられます。家具の製造一筋に行ってきた工場は昭和元年に生まれ、100年近くの間技術を伝承、特にコタツを中心につくられてきました。最近ではウッドショック、環境に対する配慮、世界情勢の流れもあり、海外に流れていた家具の生産が国内に戻ってきました。高松の工場には、職人が日夜家具をつくり続け、お客様のもとへ喜んでいただける製品を届けたいと考えています。TIMEに込められた職人の想いが皆様に届けば幸いです。
+                      | 四国、瀬戸内海に面した高松の工場で、木製アイテムの製造を一筋に行ってきた工場があります。この工場は、昭和元年に生まれ、技術を100年以上に渡って伝承してきました。特にコタツを中心に製造を行い、職人たちはお客様が喜んでいただける製品をお届けすることを心から考えています。timeに込められた職人たちの想いが、皆様に届くことを願っています。
 
           div.p_swichi-list
             section.p_innovation.t_flex
@@ -893,7 +895,7 @@ block content
                       p.u_weight600.u_letter-spacing150
                         | 最上級のウレタンで実現。理想の座り心地が続くロングライフ。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
-                      | TIMEのソファの上質な座り心地と、長い間ヘタらないロングライフのソファを実現しているのは、創業から長きにわたりクッション資材を製造・販売。有名家具ブランドや有名リゾートホテルにも製品を提供しつづけている、三重県のウレタン加工工場でつくられている高品質ウレタンです。ソファの座り心地やカラダにかかる負荷は、ウレタンの品質によって左右されます。TIMEのソファには、耐久性・体圧分散性に優れた高級ソファにも使われる最上級品質のウレタンを使用し、ふっくらと心地よくもしっかりとカラダを支える座り心地を実現しています。
+                      | timeのソファの上質な座り心地と、長い間ヘタりにくいロングライフなソファを実現しているのは、創業から長きにわたりクッション資材を製造・販売し、有名家具ブランドや有名リゾートホテルにも製品を提供しつづけている、三重県のウレタン加工工場でつくられている高品質ウレタンです。ソファの座り心地やカラダにかかる負荷は、ウレタンの品質によって左右されます。timeのソファには、耐久性・体圧分散性に優れた高級ソファにも使われる最上級品質のウレタンを使用し、ふっくらと心地よくもしっかりとカラダを支える座り心地を実現しています。
 
           div.p_swichi-list
             section.p_innovation.t_flex
@@ -916,7 +918,7 @@ block content
                       p.u_weight600.u_letter-spacing150
                         | 環境に配慮したサスティナブル生地、反毛ワタ混リサイクル糸。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
-                      | TIMEのソファ生地には、環境に配慮した素材『反毛ワタ混リサイクル糸』を使用しています。反毛ワタ混リサイクル糸は、愛知県三河地方で明治時代から続けられてきた技術をルーツとする、再生繊維を活用したリサイクル糸です。 反毛とは未使用のまま破棄される生地や、工場で発生する落ちワタ、はぎれなどを集めてもう一度ワタの状態に戻し、糸の原料を作る技術のことを言います。繊維が貴重だった戦後に発展し、現代も受け継がれている極めて優れたリサイクル産業です。 再生する際にエネルギーが過剰にかからず、廃棄物を減らすことができます。また既存の素材を再利用することで生産に必要な天然資源やエネルギーを節約し、繊維の寿命を延ばすことに繋がります。 モノを大切にする日本の文化とミッドセンチュリーデザインを融合させました。
+                      | timeのソファ生地には、環境に配慮した素材『反毛ワタ混リサイクル糸』を使用しています。反毛ワタ混リサイクル糸は、愛知県三河地方で明治時代から続けられてきた技術をルーツとする、再生繊維を活用したリサイクル糸です。 反毛とは未使用のまま破棄される生地や、工場で発生する落ちワタ、はぎれなどを集めてもう一度ワタの状態に戻し、糸の原料を作る技術のことを言います。繊維が貴重だった戦後に発展し、現代も受け継がれている極めて優れたリサイクル産業です。 再生する際にエネルギーが過剰にかからず、廃棄物を減らすことができます。また既存の素材を再利用することで生産に必要な天然資源やエネルギーを節約し、繊維の寿命を延ばすことに繋がります。 モノを大切にする日本の文化とミッドセンチュリーデザインを融合させました。
 
           div.p_swichi-list
             section.p_innovation.t_flex
@@ -939,7 +941,7 @@ block content
                       p.u_weight600.u_letter-spacing150
                         | 日本国内製の信頼の品質。
                     dd.u_lineHeight.u_weight500.u_letter-spacing50
-                      | TIMEの家具を使う皆様のかけがえのない時間を、最もくつろげる良い時間。さらには、皆様の一番好きな時間にしていただけるよう、材料から生産まで、国内製にこだわりました。日本で生まれた材料、部材にこだわり、日本の職人の手で丈夫に、そして丁寧に作り上げました。確かな品質で、長い間劣化が少なく使用していただける、時間を超えた愛着のミッドセンチュリーデザイン家具です。
+                      |timeの家具を使う皆様のかけがえのない時間を、最もくつろげる良い時間に。さらには、皆様の一番好きな時間にしていただけるよう、材料から生産まで、国内製にこだわりました。日本で生まれた材料、部材にこだわり、日本の職人の手で丈夫に、そして丁寧に作り上げました。確かな品質で、長い間劣化が少なく使用していただける、ミッドセンチュリーデザイン家具です。
 
         a.p_otherItem(href="#Functions")
           span.p_otherItem-icon.t_flex
@@ -956,7 +958,7 @@ block content
           span.p_title-name.p_title-name__large.u_weight700.t_RobotoSlab Support
           span.p_title-number.u_weight500 To Customers
         h3.p_headline.u_weight600.u_letter-spacing150.u_lineHeight.u_anime-fadeUp(data-anime="addClass")
-          span TIMEを購⼊された⽅へ
+          span timeをご購⼊されたお客様へ
         ul.p_gui.t_flex.p_gui__left(data-tab-target="support")
           li.p_gui-list.__isActive
             button(type="button").u_letter-spacing50.u_weight500
